removed some comments

--- a/pytorch_stuff/Notebooks/OMDAdam_WGAN-GP_Gaussians.ipynb
+++ b/pytorch_stuff/Notebooks/OMDAdam_WGAN-GP_Gaussians.ipynb
@@ -548,7 +548,7 @@
     "        for l in self.linears:\n",
     "            x = l(x)\n",
     "            x = self.act(x)\n",
-    "        # Note there is no activation here! This is a regression problem with arbitrary values\n",
+    "        \n",
     "        x = self.last(x) \n",
     "        return x"
    ]
@@ -718,7 +718,7 @@
     "    noise = torch.randn(BATCH_SIZE,Z_DIM).to(device)\n",
     "    x_fake = netG(noise).to(device)\n",
     "    disc_out_fake = netD(x_fake)\n",
-    "    Gloss = - torch.mean(disc_out_fake.mean(dim=0)) #+gradPnltyG\n",
+    "    Gloss = - torch.mean(disc_out_fake.mean(dim=0)) \n",
     "    \n",
     "    def closureG():\n",
     "        netG.zero_grad()\n",
@@ -726,7 +726,7 @@
     "        tnoise = torch.randn(BATCH_SIZE,Z_DIM).to(device)\n",
     "        tx_fake = netG(tnoise).to(device)\n",
     "        tdisc_out_fake = netD(tx_fake)\n",
-    "        tGloss = - torch.mean(tdisc_out_fake.mean(dim=0)) #+tgradPnltyG\n",
+    "        tGloss = - torch.mean(tdisc_out_fake.mean(dim=0)) \n",
     "\n",
     "        tGloss.backward()\n",
     "        \n",
